# kodiks-ai-lib

./: .pre-commit-config.yaml  README.dev.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: workflow.yml
kodiks_ai_lib/: __main__.py
kodiks_ai_lib/decorators/: timeout.py
kodiks_ai_lib/events/: event_producer.py  event_receiver.py  exchange_producer.py  exchange_receiver.py
kodiks_ai_lib/handlers/: minio_handler.py
kodiks_ai_lib/logger/: logger_helper.py
kodiks_ai_lib/test/: test_it.py
kodiks_ai_lib/tests/: decorator_timeout_test.py
kodiks_ai_lib/workflow/: workflow_helper.py
