[tool.poetry]
name = "kodiks-ai-lib"
version = "1.0.3"
description = "Simple and flexible ML workflow engine and Utilities"
authors = ["Ramazan Güven <ramazanguveen@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/kodiks/kodiks-ai-lib"
repository = "https://github.com/kodiks/kodiks-ai-lib"
keywords = ["machine learning", "pipeline", "rabbitmq"]
classifiers = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development",
    "Programming Language :: Python :: 3.9",
]
include = [
    "LICENSE",
    "README.md"
]

[tool.poetry.dependencies]
python = "^3.9"
pika = "^1.3.0"
requests = "^2.31.0"
black = "^24.8.0"
pre-commit = "^3.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

# New scripts
[tool.poetry.scripts]
kodiks-ai-lib = 'kodiks_ai_lib:main'

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
